# friendly-enigma

./: .aider.conf.yml.md  .gitignore  2026-01-14-init.txt  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  HARDWARE_AWARE_ARCH.md  LICENSE  LOCAL_LLM_ARCH.md  MISSION.md  PROFESSIONALIZATION_SUMMARY.md  RALPH_PLAN.json  RALPH_PROGRESS.md  RALPH_TASK.md  RALPH_V2_PLAN.md  README.md  REPOSITORY_SETUP.md  RalphAI.desktop  SECURITY.md  STATUS.md  SYSTEM_DESIGN_TASK.md  TOOLS.md  context.json  docker-compose.yml  fib_test.py  generated_script.py  install_void_ai_portable.sh  launch_ralph.sh  meta_ralph.sh  metrics.jsonl  pyproject.toml  ralph_daemon.py  ralph_epistemology_track.md  ralph_loop.sh  ralph_simple.py  ralph_voice.py  (+12 more)
.claude/agents/: git-manager.md  github-repo-manager.md
.gemini/: checkpoint.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: asic_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  main.yml
.goose/: instructions.md
.obsidian/: graph.json  workspace.json  workspace.json.md
ai_tech_stack/: ollama_client.py  ralph_chat.py  ralph_chat_api.py  ralph_loop.sh  ralph_simple.py
backend/: Cargo.toml
backend/app/: app.py  model_loader.py
backend/src/: api.rs  db.rs  main.rs  ollama.rs
backend/tests/: test_app.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/code_styleguides/: rust.md
data/: RALPH_TASK.md
docs/: CHANGELOG.md  MISSION.md  SCM_AXIOMS.md  STATUS.md  projectralph.md
frontend/: Cargo.toml  index.html
frontend/src/: index.html  lib.rs  main.rs
legacy/: example.py  generated_script.py  generated_script.sh  haiku_error_handler.py  haiku_error_message.py  haiku_generator.py  main.py  memory_reader.py  script.py  some_module.py
legacy_archive/: RALPH_PLAN.json  install_void_ai_portable.sh
legacy_archive/ai_tech_stack/: ollama_client.py  ralph_proxy.py  ralph_simple.py  wheeler_recall.py  wheeler_store.py
logs/security/: audit.jsonl
memory/: test_tag.md  user_prefs.md  vectors.json
ml/models/: placeholder_model.txt
ralph-vscode/: package-lock.json  package.json
ralph_core/: __init__.py  compressor.py  consolidator.py  context_budget.py  controller.py  dreamer.py  executor.py  forklift.py  git_manager.py  librarian_daemon.py  memory.py  metrics.py  npu_engine.py  ollama_client.py  planning.py  runner.py  swarm.py  swarm_dispatcher.py  tools.py  vector_db.py  vision.py  voice.py  vram_sentinel.py  web.py  wheeler.py  wheeler_weights.py
ralph_gui/: Cargo.toml
ralph_gui/src/: app.rs  main.rs  tests.rs  theme.rs
ralph_gui/src/ralph/: events.rs  messages.rs  mod.rs  runner.rs
ralph_gui/src/ui/: agent_flow.rs  controls.rs  graph.rs  input.rs  logs.rs  metrics.rs  mod.rs  tasks.rs
ralph_ui/: package.json  playwright.config.js  test_ui.py
sandbox/: Dockerfile  docker-compose.yml
scripts/: create_ov_wheeler_model.py  ingest_hf.py  verify_cognitive_phase_4.py  verify_phase_2.py  verify_phase_3.py  verify_phase_4.py  verify_viz_dashboard.py
squashfs-root/: AppRun.wrapped  OpenRGB.desktop
tests/: benchmark_npu_memory.py  test_autonomic.py  test_bridge_integration.py  test_cli.py  test_codec_invariance.py  test_context_budget.py  test_dynamics_engine.py  test_loop_bus.py  test_loop_controller.py  test_memory.py  test_npu_visibility.py  test_ollama_vram.py  test_reasoning.py  test_storage.py  test_text_codec.py  test_viz.py  test_vram_sentinel.py  test_wheeler_npu_kernels.py  test_wheeler_weights.py
twai/: launch_twai.sh
wheeler memory/: .gitignore  README.md  pyproject.toml
wheeler memory/docs/: api.md  architecture.md  cli.md  concepts.md  future.md  gpu.md  install.md
wheeler memory/scripts/: scrub_brick.py  system_info.py  test_diversity.py  wheeler_recall.py  wheeler_store.py  wheeler_temps.py
wheeler memory/wheeler_memory/: __init__.py  dynamics.py  embedding.py  gpu_dynamics.py  reconstruction.py  rotation.py  storage.py  temperature.py
wheeler memory/wheeler_memory/gpu/: Makefile  ca_kernel.hip
wheeler_ai_training/: README.md  export_dynamics.py  models.py  setup_rocm.sh  setup_training_env.sh  test_epistemology.py  train.py  wheeler_ai.py  wheeler_cpu.py
(+155 files in other folders)
