[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo-net = { version = "0.6.0", features = ["eventsource"] }
leptos = { version = "0.8.15", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"
